Replace rewrites with routes in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -6,16 +6,10 @@
       "use": "@vercel/static"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/(.*)",
+      "dest": "/$1"
     }
-  ]
-}    }
-  ]
-}    }
-  ]
-}    }
   ]
 }
